[project]
name = "randomly-pivoted-cholesky"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan N. Epperly and Joel A. Tropp and Robert J. Webbe"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "dppy (>=0.3.3,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
